# libmul_cpp

./: CMakeLists.txt  README.md  mul_cpp.pc.in
include/: mul.h
src/: mul.cpp
